Fixes overflow (white-space)

--- a/css/my-app.css
+++ b/css/my-app.css
@@ -87,6 +87,10 @@
 	margin-bottom: 150px;
 }
 
+.item-title {
+	white-space: normal !important;
+}
+
 
 /* ----------------------------------------------
  * Generated by Animista on 2017-3-23 21:48:15
